--- a/views/html/admin.html
+++ b/views/html/admin.html
@@ -162,8 +162,12 @@
                                             <tbody>
                                                 <tr>
                                                     <td>
-                                                        <h3><a href="registrations.html">Registrations</a></h3>
-                                                        <p>Register users into the system.</p>
+                                                        <h3><a href="sturegistrations.html">Student Registrations</a></h3>
+                                                        <p>Register Student users into the system.</p>
+                                                        <h3><a href="tearegistrations.html"> Teacher Registrations</a></h3>
+                                                        <p>Register Teacher users into the system.</p>
+                                                        <h3><a href="recepregistrations.html">Receptionist Registrations</a></h3>
+                                                        <p>Register Receptionist users into the system.</p>
                                                     </td>
                                                 </tr>
                                             </tbody>
@@ -409,223 +413,123 @@
         </div>
     </section> -->
     <section id="footer">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-3 col-sm-3 col-xs-12 block">
-                        <div class="footer-block">
-                            <h4>Southern Institute Galle</h4>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3 col-sm-3 col-xs-12 block">
+                    <div class="footer-block">
+                        <h4>Southern Institute Galle</h4>
                             <div class="user-image"><img src="..\..\..\assets1\img\logo.jpeg" alt="user" class="img-responsive" /></div>
-                           
-                            <!-- <img src="..\..\..\assets1\img\logo.jpeg"> -->
-                            <!-- <h5>Wimalasurendra Mawatha, Galle 80000, </br>  Sri Lanka</h5>
-                            <a href= "https://www.google.com/maps/place/Southern+Educational+Institute/@6.043113,80.2108316,17z/data=!3m1!4b1!4m5!3m4!1s0x0:0xb116c9761f2d7d15!8m2!3d6.043113!4d80.2130203">
-                                <img src="..\..\..\assets1\img\map.png">
-                            </a>
-                             <hr/> -->
-                            <!-- <p>Lorem ipsum dolor sit amet sit legimus copiosae instructior ei ut vix denique fierentis ea saperet inimicu ut qui dolor oratio mnesarchum.
-                            </p> -->
-                            <!-- <a href="#" class="learnmore">Learn More <i class="fa fa-caret-right"></i></a> -->
-                        </div>
+                   
+                        <!-- <h5>Wimalasurendra Mawatha, Galle 80000, </br>  Sri Lanka</h5>
+                        <a href= "https://www.google.com/maps/place/Southern+Educational+Institute/@6.043113,80.2108316,17z/data=!3m1!4b1!4m5!3m4!1s0x0:0xb116c9761f2d7d15!8m2!3d6.043113!4d80.2130203">
+                            <img src="..\..\..\assets1\img\map.png">
+                        </a>
+                         <hr/> -->
+                        <!-- <p>Lorem ipsum dolor sit amet sit legimus copiosae instructior ei ut vix denique fierentis ea saperet inimicu ut qui dolor oratio mnesarchum.
+                        </p> -->
+                        <!-- <a href="#" class="learnmore">Learn More <i class="fa fa-caret-right"></i></a> -->
                     </div>
-    
-                    <div class="col-md-3 col-sm-3 col-xs-12 block">
-                        <div class="footer-block">
-                            <h4>Useful Links</h4>
-                            <!-- <hr/> -->
-                            <ul class="footer-links">
-                                <li><a href="about.html">About Us</a></li>
-                                <li><a href="class_schedule.html">Class Schedule</a></li>
-                                <li><a href="contact.html">Contact Us</a></li>
-                                <li><a href="login.html">Sign In</a></li>
-                                <!-- <li><a href="registration.html">Sign Up</a></li> -->
-                            </ul>
-                        </div>
+                </div>
+
+                <div class="col-md-3 col-sm-3 col-xs-12 block">
+                    <div class="footer-block">
+                        <h4>Useful Links</h4>
+                        <!-- <hr/> -->
+                        <ul class="footer-links">
+                            <li><a href="home.html">Home</a></li>
+                            <li><a href="class_schedule.html">Class Schedule</a></li>
+                            <li><a href="contact.html">Contact Us</a></li>
+                            <li><a href="login.html">Sign In</a></li>
+                            <!-- <li><a href="registration.html">Sign Up</a></li> -->
+                        </ul>
                     </div>
-    
-                    
-                </ul>
-                    <div class="col-md-3 col-sm-3 col-xs-12 block">
-                        <div class="footer-block">
-                            <h4>Contact Us</h4>
-                            <!-- <hr/> -->
-                            <h4>Southern Institute Galle</h4>
-                            <h5>Wimalasurendra Mawatha, Galle 80000, </br>  Sri Lanka</h5>
+                </div>
+
+                
+            </ul>
+                <div class="col-md-3 col-sm-3 col-xs-12 block">
+                    <div class="footer-block">
+                            <h4>Visit Us</h4>
+                            <h5>Southern Institute Galle</h5>
+                            <h5>Wimalasurendra Mawatha, <br/>Galle 80000, </br>  Sri Lanka</h5>
                             <a href= "https://www.google.com/maps/place/Southern+Educational+Institute/@6.043113,80.2108316,17z/data=!3m1!4b1!4m5!3m4!1s0x0:0xb116c9761f2d7d15!8m2!3d6.043113!4d80.2130203">
                                 <img src="..\..\..\assets1\img\map.png">
                             </a>
                              <!-- <hr/> -->
-                            <!-- <ul class="footer-links">
-                                <li><a href="#">Blog</a></li>
-                                <li><a href="#">Forum</a></li>
-                                <li><a href="#">Free Goods</a></li>
-                            </ul> -->
-                        </div>
+                        <!-- <h4>Contact Us</h4>
+                        <hr/>
+                        <h4>Southern Institute Galle</h4>
+                        <h5>Wimalasurendra Mawatha, Galle 80000, </br>  Sri Lanka</h5>
+                        <a href= "https://www.google.com/maps/place/Southern+Educational+Institute/@6.043113,80.2108316,17z/data=!3m1!4b1!4m5!3m4!1s0x0:0xb116c9761f2d7d15!8m2!3d6.043113!4d80.2130203">
+                            <img src="..\..\..\assets1\img\map.png">
+                        </a>
+                         <hr/> -->
+                        <!-- <ul class="footer-links">
+                            <li><a href="#">Blog</a></li>
+                            <li><a href="#">Forum</a></li>
+                            <li><a href="#">Free Goods</a></li>
+                        </ul> -->
                     </div>
-    
-                    <div class="col-md-3 col-sm-3 col-xs-12 <block></block>">
-                        <div class="footer-block">
-                            <h4>Recent Posts</h4>
-                            <!-- <hr/> -->
-                            <ul class="footer-links">
-                                <li>
-                                     <div class="user-image"><img src="..\..\..\assets1\img\post.jpeg" alt="user" class="img-responsive" /></div>
-                           
-                                    <!-- <a href="#" class="post">Lorem ipsum dolor sit amet</a>
-                                    <p class="post-date">May 25, 2017</p> -->
-                                </li>
-                                <!-- <li>
-                                    <a href="#" class="post">Lorem ipsum dolor sit amet</a>
-                                    <p class="post-date">May 25, 2017</p>
-                                </li>
-                                <li>
-                                    <a href="#" class="post">Lorem ipsum dolor sit amet</a>
-                                    <p class="post-date">May 25, 2017</p>
-                                </li> -->
-    
-                            </ul>
-                        </div>
+                </div>
+
+                <div class="col-md-3 col-sm-3 col-xs-12 <block></block>">
+                    <div class="footer-block">
+                        <h4>Recent Posts</h4>
+                        <!-- <hr/> -->
+                        <ul class="footer-links">
+                            <li>
+                                 <div class="user-image"><img src="..\..\..\assets1\img\post.jpeg" alt="user" class="img-responsive" /></div>
+                   
+                                <!-- <a href="#" class="post">Lorem ipsum dolor sit amet</a>
+                                <p class="post-date">May 25, 2017</p> -->
+                            </li>
+                            <!-- <li>
+                                <a href="#" class="post">Lorem ipsum dolor sit amet</a>
+                                <p class="post-date">May 25, 2017</p>
+                            </li>
+                            <li>
+                                <a href="#" class="post">Lorem ipsum dolor sit amet</a>
+                                <p class="post-date">May 25, 2017</p>
+                            </li> -->
+
+                        </ul>
                     </div>
                 </div>
             </div>
-    
-    
-        </section>
-    
-        <section id="bottom-footer">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6 col-sm-6 col-xs-12 btm-footer-links">
-                        <a href="#">Privacy Policy</a>
-                        <a href="#">Terms of Use</a>
-                    </div>
-                    <div class="col-md-6 col-sm-6 col-xs-12 copyright">
-                        Developed by <a href="#">Team Innoview</a> designed by <a href="#">UCSC</a>
-                    </div>
-                </div>
-            </div>
-        </section>
-    
-        <!-- <div id="panel">
-            <div id="panel-admin">
-                <div class="panel-admin-box">
-                    <div id="tootlbar_colors">
-                        <button class="color" style="background-color:#1abac8;" onclick="mytheme(0)"></button>
-                        <button class="color" style="background-color:#ff8a00;" onclick="mytheme(1)"> </button>
-                        <button class="color" style="background-color:#b4de50;" onclick="mytheme(2)"> </button>
-                        <button class="color" style="background-color:#e54e53;" onclick="mytheme(3)"> </button>
-                        <button class="color" style="background-color:#1abc9c;" onclick="mytheme(4)"> </button>
-                        <button class="color" style="background-color:#159eee;" onclick="mytheme(5)"> </button>
-                    </div>
-                </div>
-    
-            </div>
-            <a class="open" href="#"><span><i class="fa fa-gear fa-spin"></i></span></a>
-        </div> -->
-    </body>
-    </html>
-    <!-- <section id="footer">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-3 col-sm-3 col-xs-12 block">
-                        <div class="footer-block">
-                            <h4>Address</h4>
-                            <hr/>
-                            <p>Southern Institute Galle, Sri Lanka
-                            </p> -->
-                            <!-- <a href="#" class="learnmore">Learn More <i class="fa fa-caret-right"></i></a> -->
-                        <!-- </div>
-                    </div>
-    
-                    <div class="col-md-3 col-sm-3 col-xs-12 block">
-                        <div class="footer-block">
-                            <h4>Useful Links</h4>
-                            <hr/>
-                            <ul class="footer-links">
-                                <li><a href="#">About Us</a></li> -->
-                                <!-- <li><a href="#">Features</a></li>
-                                <li><a href="#">Portfolio</a></li> -->
-                                <!-- <li><a href="#">Class Schedule</a></li>
-                                <li><a href="#">Contact Us</a></li>
-                                <li><a href="#">Sign Out</a></li>
-                                <li><a href="#">Registrations</a></li>
-                                <li><a href="#">Notifications</a></li>
-                                <li><a href="#">Courses</a></li> -->
-                                <!-- <li><a href="#">Sign In</a></li>
-                                <li><a href="#">Sign Up</a></li> -->
-                            <!-- </ul>
-                        </div>
-                    </div>
-    
-                    <div class="col-md-3 col-sm-3 col-xs-12 block">
-                        <div class="footer-block">
-                            <h4>Community</h4>
-                            <hr/>
-                            <ul class="footer-links">
-                                <li><a href="#">Blog</a></li>
-                                <li><a href="#">Forum</a></li>
-                                <li><a href="#">Free Goods</a></li>
-                            </ul>
-                        </div>
-                    </div>
-    
-                    <div class="col-md-3 col-sm-3 col-xs-12 <block></block>">
-                        <div class="footer-block">
-                            <h4>Recent Posts</h4>
-                            <hr/>
-                            <ul class="footer-links">
-                                <li>
-                                    <a href="#" class="post">Lorem ipsum dolor sit amet</a>
-                                    <p class="post-date">May 25, 2017</p>
-                                </li>
-                                <li>
-                                    <a href="#" class="post">Lorem ipsum dolor sit amet</a>
-                                    <p class="post-date">May 25, 2017</p>
-                                </li>
-                                <li>
-                                    <a href="#" class="post">Lorem ipsum dolor sit amet</a>
-                                    <p class="post-date">May 25, 2017</p>
-                                </li>
-    
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-    
-    
-        </section>
-    
-        <section id="bottom-footer">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6 col-sm-6 col-xs-12 btm-footer-links">
-                        <a href="#">Privacy Policy</a>
-                        <a href="#">Terms of Use</a>
-                    </div>
-                    <div class="col-md-6 col-sm-6 col-xs-12 copyright">
-                        Developed by <a href="#">Aspire Software Solutions</a> designed by <a href="#">Designing Team</a>
-                    </div>
-                </div>
-            </div>
-        </section>
-    
-        <div id="panel">
-            <div id="panel-admin">
-                <div class="panel-admin-box">
-                    <div id="tootlbar_colors">
-                        <button class="color" style="background-color:#1abac8;" onclick="mytheme(0)"></button>
-                        <button class="color" style="background-color:#ff8a00;" onclick="mytheme(1)"> </button>
-                        <button class="color" style="background-color:#b4de50;" onclick="mytheme(2)"> </button>
-                        <button class="color" style="background-color:#e54e53;" onclick="mytheme(3)"> </button>
-                        <button class="color" style="background-color:#1abc9c;" onclick="mytheme(4)"> </button>
-                        <button class="color" style="background-color:#159eee;" onclick="mytheme(5)"> </button>
-                    </div>
-                </div>
-    
-            </div>
-            <a class="open" href="#"><span><i class="fa fa-gear fa-spin"></i></span></a>
         </div>
-    
-    </body>
-    
-</html> -->
+
+
+    </section>
+
+    <section id="bottom-footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 col-sm-6 col-xs-12 btm-footer-links">
+                    <a href="#">Privacy Policy</a>
+                    <a href="#">Terms of Use</a>
+                </div>
+                <div class="col-md-6 col-sm-6 col-xs-12 copyright">
+                    Developed by <a href="#">Team Innoview</a> designed by <a href="#">UCSC</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- <div id="panel">
+        <div id="panel-admin">
+            <div class="panel-admin-box">
+                <div id="tootlbar_colors">
+                    <button class="color" style="background-color:#1abac8;" onclick="mytheme(0)"></button>
+                    <button class="color" style="background-color:#ff8a00;" onclick="mytheme(1)"> </button>
+                    <button class="color" style="background-color:#b4de50;" onclick="mytheme(2)"> </button>
+                    <button class="color" style="background-color:#e54e53;" onclick="mytheme(3)"> </button>
+                    <button class="color" style="background-color:#1abc9c;" onclick="mytheme(4)"> </button>
+                    <button class="color" style="background-color:#159eee;" onclick="mytheme(5)"> </button>
+                </div>
+            </div>
+
+        </div>
+        <a class="open" href="#"><span><i class="fa fa-gear fa-spin"></i></span></a>
+    </div> -->
+</body>
+</html>
