--- a/views/html/class_schedule.html
+++ b/views/html/class_schedule.html
@@ -148,7 +148,11 @@
                             </div>
                         </div>
                         <!-- End portfolio-head -->
-                        
+                        <div class="portfolio-content">
+                            <h5 class="title">Lorem Ipsum</h5>
+                            <p>Lorem ipsum dolor sit amet sit legimus copiosae instructior ei ut vix denique fierentis ea saperet inimicu ut qui dolor oratio mnesarchum.</p>
+                        </div>
+                        <!-- End portfolio-content -->
                     </div>
                     <!-- End portfolio-item -->
                 </div>
@@ -162,34 +166,11 @@
                             </div>
                         </div>
                         <!-- End portfolio-head -->
-                        
-                </div>
-                <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 portfolio-item">
-                    <div class="portfolio-one">
-                        <div class="portfolio-head">
-                            <div class="portfolio-img"><img alt="" src="../../../assets1/img/portfolio-1.jpg"></div>
-                            <div class="portfolio-hover">
-                                <a class="portfolio-link" href="#"><i class="fa fa-link"></i></a>
-                                <a class="portfolio-zoom prettyPhoto" href="#"><i class="fa fa-search"></i></a>
-                            </div>
+                        <div class="portfolio-content">
+                            <h5 class="title">Lorem Ipsum</h5>
+                            <p>Lorem ipsum dolor sit amet sit legimus copiosae instructior ei ut vix denique fierentis ea saperet inimicu ut qui dolor oratio mnesarchum.</p>
                         </div>
-                        
-            
-                   
-                
-                    <!-- End portfolio-item -->
-                </div>
-                <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 portfolio-item">
-                    <div class="portfolio-one">
-                        <div class="portfolio-head">
-                            <div class="portfolio-img"><img alt="" src="../../../assets1/img/portfolio-1.jpg"></div>
-                            <div class="portfolio-hover">
-                                <a class="portfolio-link" href="#"><i class="fa fa-link"></i></a>
-                                <a class="portfolio-zoom prettyPhoto" href="#"><i class="fa fa-search"></i></a>
-                            </div>
-                        </div>
-                        <!-- End portfolio-head -->
-                        
+                        <!-- End portfolio-content -->
                     </div>
                     <!-- End portfolio-item -->
                 </div>
@@ -203,7 +184,123 @@
                             </div>
                         </div>
                         <!-- End portfolio-head -->
-                        
+                        <div class="portfolio-content">
+                            <h5 class="title">Lorem Ipsum</h5>
+                            <p>Lorem ipsum dolor sit amet sit legimus copiosae instructior ei ut vix denique fierentis ea saperet inimicu ut qui dolor oratio mnesarchum.</p>
+                        </div>
+                        <!-- End portfolio-content -->
+                    </div>
+                    <!-- End portfolio-item -->
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 portfolio-item">
+                    <div class="portfolio-one">
+                        <div class="portfolio-head">
+                            <div class="portfolio-img"><img alt="" src="../../../assets1/img/portfolio-1.jpg"></div>
+                            <div class="portfolio-hover">
+                                <a class="portfolio-link" href="#"><i class="fa fa-link"></i></a>
+                                <a class="portfolio-zoom" href="#"><i class="fa fa-search"></i></a>
+                            </div>
+                        </div>
+                        <!-- End portfolio-head -->
+                        <div class="portfolio-content">
+                            <h5 class="title">Lorem Ipsum</h5>
+                            <p>Lorem ipsum dolor sit amet sit legimus copiosae instructior ei ut vix denique fierentis ea saperet inimicu ut qui dolor oratio mnesarchum.</p>
+                        </div>
+                        <!-- End portfolio-content -->
+                    </div>
+                    <!-- End portfolio-item -->
+                </div>
+                <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 portfolio-item">
+                    <div class="portfolio-one">
+                        <div class="portfolio-head">
+                            <div class="portfolio-img"><img alt="" src="../../../assets1/img/portfolio-1.jpg"></div>
+                            <div class="portfolio-hover">
+                                <a class="portfolio-link" href="#"><i class="fa fa-link"></i></a>
+                                <a class="portfolio-zoom prettyPhoto" href="#"><i class="fa fa-search"></i></a>
+                            </div>
+                        </div>
+                        <!-- End portfolio-head -->
+                        <div class="portfolio-content">
+                            <h5 class="title">Lorem Ipsum</h5>
+                            <p>Lorem ipsum dolor sit amet sit legimus copiosae instructior ei ut vix denique fierentis ea saperet inimicu ut qui dolor oratio mnesarchum.</p>
+                        </div>
+                        <!-- End portfolio-content -->
+                    </div>
+                    <!-- End portfolio-item -->
+                </div>
+                <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 portfolio-item">
+                    <div class="portfolio-one">
+                        <div class="portfolio-head">
+                            <div class="portfolio-img"><img alt="" src="../../../assets1/img/portfolio-1.jpg"></div>
+                            <div class="portfolio-hover">
+                                <a class="portfolio-link" href="#"><i class="fa fa-link"></i></a>
+                                <a class="portfolio-zoom prettyPhoto" href="#"><i class="fa fa-search"></i></a>
+                            </div>
+                        </div>
+                        <!-- End portfolio-head -->
+                        <div class="portfolio-content">
+                            <h5 class="title">Lorem Ipsum</h5>
+                            <p>Lorem ipsum dolor sit amet sit legimus copiosae instructior ei ut vix denique fierentis ea saperet inimicu ut qui dolor oratio mnesarchum.</p>
+                        </div>
+                        <!-- End portfolio-content -->
+                    </div>
+                    <!-- End portfolio-item -->
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 portfolio-item">
+                    <div class="portfolio-one">
+                        <div class="portfolio-head">
+                            <div class="portfolio-img"><img alt="" src="../../../assets1/img/portfolio-1.jpg"></div>
+                            <div class="portfolio-hover">
+                                <a class="portfolio-link" href="#"><i class="fa fa-link"></i></a>
+                                <a class="portfolio-zoom" href="#"><i class="fa fa-search"></i></a>
+                            </div>
+                        </div>
+                        <!-- End portfolio-head -->
+                        <div class="portfolio-content">
+                            <h5 class="title">Lorem Ipsum</h5>
+                            <p>Lorem ipsum dolor sit amet sit legimus copiosae instructior ei ut vix denique fierentis ea saperet inimicu ut qui dolor oratio mnesarchum.</p>
+                        </div>
+                        <!-- End portfolio-content -->
+                    </div>
+                    <!-- End portfolio-item -->
+                </div>
+                <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 portfolio-item">
+                    <div class="portfolio-one">
+                        <div class="portfolio-head">
+                            <div class="portfolio-img"><img alt="" src="../../../assets1/img/portfolio-1.jpg"></div>
+                            <div class="portfolio-hover">
+                                <a class="portfolio-link" href="#"><i class="fa fa-link"></i></a>
+                                <a class="portfolio-zoom prettyPhoto" href="#"><i class="fa fa-search"></i></a>
+                            </div>
+                        </div>
+                        <!-- End portfolio-head -->
+                        <div class="portfolio-content">
+                            <h5 class="title">Lorem Ipsum</h5>
+                            <p>Lorem ipsum dolor sit amet sit legimus copiosae instructior ei ut vix denique fierentis ea saperet inimicu ut qui dolor oratio mnesarchum.</p>
+                        </div>
+                        <!-- End portfolio-content -->
+                    </div>
+                    <!-- End portfolio-item -->
+                </div>
+                <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 portfolio-item">
+                    <div class="portfolio-one">
+                        <div class="portfolio-head">
+                            <div class="portfolio-img"><img alt="" src="../../../assets1/img/portfolio-1.jpg"></div>
+                            <div class="portfolio-hover">
+                                <a class="portfolio-link" href="#"><i class="fa fa-link"></i></a>
+                                <a class="portfolio-zoom prettyPhoto" href="#"><i class="fa fa-search"></i></a>
+                            </div>
+                        </div>
+                        <!-- End portfolio-head -->
+                        <div class="portfolio-content">
+                            <h5 class="title">Lorem Ipsum</h5>
+                            <p>Lorem ipsum dolor sit amet sit legimus copiosae instructior ei ut vix denique fierentis ea saperet inimicu ut qui dolor oratio mnesarchum.</p>
+                        </div>
+                        <!-- End portfolio-content -->
                     </div>
                     <!-- End portfolio-item -->
                 </div>
